--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "next": "^11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
-    "@types/mysql": "^2.15.19",
     "@types/node": "^15.14.2",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
