--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:db": "pscale connect wadoku develop --execute 'npm run dev'",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -20,6 +19,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^15.14.2",
     "@types/react": "^17.0.14",
