--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mysql2": "^2.2.5",
     "next": "^11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-paginate": "^7.1.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -25,6 +26,7 @@
     "@types/node": "^15.14.2",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@types/react-paginate": "^7.1.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "autoprefixer": "^10.3.1",
