--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.2",
+    "clsx": "^1.1.1",
     "mysql2": "^2.2.5",
     "next": "^11.0.1",
     "react": "17.0.2",
