--- a/package.json
+++ b/package.json
@@ -13,37 +13,37 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "mysql2": "^2.2.5",
-    "next": "^11.0.1",
-    "react": "17.0.2",
+    "mysql2": "^2.3.2",
+    "next": "^12.0.1",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-paginate": "^7.1.3"
+    "react-paginate": "^7.1.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@types/jest": "^26.0.24",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.2",
     "@types/node": "^15.14.7",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-paginate": "^7.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "autoprefixer": "^10.3.1",
-    "babel-jest": "^27.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "autoprefixer": "^10.4.0",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint-config-next": "^12.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.6",
-    "postcss": "^8.3.6",
-    "prettier": "^2.3.2",
+    "jest": "^27.3.1",
+    "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "tailwindcss": "^2.2.7",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.3.5"
   },
   "jest": {
