--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "jest": "^27.3.1",
     "postcss": "^8.4.4",
     "prettier": "^2.5.0",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "pretty-quick": "^3.1.2",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.2"
   },
   "jest": {
     "testEnvironment": "jsdom"
