--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "pre-commit": "pretty-quick --staged"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "clsx": "^1.1.1",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mysql2": "^2.3.3",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-paginate": "^7.1.5"
+    "react-paginate": "^7.1.5",
+    "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
+    "@types/kuromoji": "^0.1.1",
     "@types/node": "^15.14.7",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
