feat: change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@thorbens/wadoku-dict",
+  "name": "@thorbens/nihongosensei",
   "version": "0.1.0",
   "private": true,
   "scripts": {
