--- a/package.json
+++ b/package.json
@@ -13,41 +13,42 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "clsx": "^1.1.1",
+    "clsx": "^1.2.0",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mysql2": "^2.3.3",
-    "next": "^12.1.6",
-    "react": "^17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.2.0",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-paginate": "^8.1.3",
-    "use-debounce": "^7.0.1",
+    "use-debounce": "^8.0.1",
     "weighted": "^1.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@types/jest": "^27.4.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.4",
     "@types/kuromoji": "^0.1.1",
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/react-paginate": "^7.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
     "autoprefixer": "^10.4.7",
-    "eslint": "^8.18.0",
-    "eslint-config-next": "^12.1.6",
+    "eslint": "^8.19.0",
+    "eslint-config-next": "^12.2.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.0",
     "pretty-quick": "^3.1.3",
-    "tailwindcss": "^3.1.3",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.7.4"
   }
 }
