--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     {
       "files": ["**/*.tsx", "**/*.ts"],
       "rules": {
+        "react/react-in-jsx-scope": "off",
         "react/prop-types": "off",
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": [
