feat: add matomo analytics

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ DEFAULT_LIMIT=15
 MAX_LIMIT=15
 
 DEFAULT_FURIGANA_INPUT_VALUE=すべての人間は、生まれながらにして自由であり、かつ、尊厳と権利とについて平等である。
+
+NEXT_PUBLIC_MATOMO_URL=//stats.nihongosensei.app
+NEXT_PUBLIC_MATOMO_SITE_ID=3
