ci: disable sha tags on docker images

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
+            type=sha,enable=false
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
