--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@heroicons/react": "^2.0.17",
     "@socialgouv/matomo-next": "^1.6.1",
     "clsx": "^1.2.1",
-    "kuroshiro-analyzer-kuromoji": "^1.1.0",
+    "kuromoji": "^0.1.2",
     "mysql2": "^3.2.0",
     "next": "^13.3.0",
     "react": "^18.2.0",
