--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:@next/next/recommended",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-type-checked",
     "prettier",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended"
@@ -19,7 +19,8 @@
       "jsx": true
     },
     "ecmaVersion": 2018,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": true
   },
   "settings": {
     "react": {
