--- a/package.json
+++ b/package.json
@@ -12,44 +12,44 @@
     "pre-commit": "pretty-quick --staged"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.17",
+    "@heroicons/react": "^2.1.1",
     "@socialgouv/matomo-next": "^1.8.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "kuromoji": "^0.1.2",
-    "mysql2": "^3.6.1",
-    "next": "^14.0.3",
+    "mysql2": "3.8.0",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-paginate": "^8.2.0",
-    "use-debounce": "^9.0.4",
+    "use-debounce": "^10.0.0",
     "weighted": "^1.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.5",
+    "@testing-library/jest-dom": "^6.3.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/kuromoji": "^0.1.1",
-    "@types/node": "^20.8.9",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-paginate": "^7.1.1",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.50.0",
-    "eslint-config-next": "^14.0.3",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-react": "^7.33.1",
+    "@types/node": "^20.11.8",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-paginate": "^7.1.4",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.31",
-    "prettier": "^2.8.8",
-    "prettier-plugin-organize-imports": "^3.2.3",
-    "pretty-quick": "^3.1.3",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "pretty-quick": "^4.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
