--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     "paths": {
       "@components/*": ["components/*"],
       "@helper": ["helper/index.ts"],
-      "@services/*": ["services/*"]
-    }
+      "@services/*": ["services/*"],
+    },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
