--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-paginate": "^8.2.0",
-    "use-debounce": "^10.0.1",
-    "weighted": "^1.0.0"
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
