--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: .next
-          path: .next
+          path: "./.next"
 
   build-and-push-image:
     runs-on: ubuntu-latest
