--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: .next
-          path: "./.next"
+          name: build
+          path: ./build
+          if-no-files-found: error
 
   build-and-push-image:
     runs-on: ubuntu-latest
