--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "pre-commit": "pretty-quick --staged"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
     "@socialgouv/matomo-next": "^1.9.0",
     "clsx": "^2.1.1",
     "kuromoji": "^0.1.2",
-    "mysql2": "3.10.0",
-    "next": "^14.2.3",
+    "mysql2": "^3.11.3",
+    "next": "^14.2.12",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-paginate": "^8.2.0",
-    "use-debounce": "^10.0.1"
+    "use-debounce": "^10.0.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.2",
-    "@types/jest": "^29.5.11",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.13",
     "@types/kuromoji": "^0.1.3",
-    "@types/node": "^20.13.0",
-    "@types/react": "^18.3.3",
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@types/react-paginate": "^7.1.4",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.2",
     "eslint-config-prettier": "^9.1.0",
@@ -44,11 +44,11 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.0",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^3.2.4",
     "pretty-quick": "^4.0.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.4.5"
   }
 }
